tests/cases/parser/types/incomplete_ty_params.hash
// run=fail, stage=parse

{
    T := struct<U, (
        beep: T,
    );
};

{
    T := struct U,> (
        beep: T,
    );
};

{
    T := enum <,> (
        beep: T,
    );
};

{
    // @@Todo: make a warning
    T := trait <> {
        mux: () -> char;
    };
};

{
    T := trait < { // missing `>`
        mux: () -> char;
    };
};
